# blog-scaling-containers-on-aws-in-2022

./: README.md
app/: Dockerfile  Dockerfile.windows  README.md  app.py  gunicorn.conf.py  pyproject.toml
apprunner/: README.md  apprunner.tf  iam.tf  main.tf
ecs-on-ec2/: README.md  app.tf  asg.tf  ec2-ecs-config.toml  ecs.tf  iam.tf  main.tf  sg.tf  vpc.tf
ecs-on-fargate/: README.md  app.tf  ecs.tf  iam.tf  main.tf  vpc.tf
eks-on-ec2-cluster-autoscaler/: README.md  apps-cluster-autoscaler.tf  apps-eks-addon-vpc-cni.tf  apps-kube-eventer.tf  apps-myapp.tf  eks.tf  iam-ec2-workers.tf  main.tf  vpc.tf
eks-on-ec2-ipv6/: README.md  apps-cluster-autoscaler.tf  apps-eks-addon-vpc-cni.tf  apps-karpenter.tf  apps-myapp.tf  eks.tf  karpenter.tf  main.tf  test.yaml  vpc.tf
eks-on-ec2-karpenter/: README.md  apps-cw-base.tf  apps-cw-logs.tf  apps-karpenter.tf  apps-kube-eventer.tf  apps-myapp.tf  eks.tf  karpenter.tf  main.tf  sg-per-pod.tf  vpc.tf
eks-on-fargate/: README.md  apps-cw-logs.tf  apps-cw-metrics.tf  apps-kube-eventer.tf  apps-myapp.tf  eks.tf  iam-fargate-workers.tf  main.tf  vpc.tf
lambda/: README.md  api-gatway.tf  lambda.tf  main.tf
lambda/src/: index.py  requirements.txt
